# tonic-sqlx

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  migration-analysis.md
.sqlx/: query-0301cc892442a2b0360d27e76e413f70ee02d25bd537295aa3c4f1ddc1d99df8.json  query-194e0a1e1657b929f44cdddece1167e00fa4f45b70e44d814a30681e5eb83fe6.json  query-34144d1b13cb13d6d91927297b1aec2184a75af465f3d842712a60d27c9fd1e9.json  query-3caa0be0277ca7827c330df356b52ff1e376684bdc86099c53d69255598bdf58.json  query-50cbd74337494734c56e94eb1038fe246677ea353ea718a1d85f38b06df127af.json  query-56333df4cb281e88a40e215e95f9a72c2b7971ebc41e5acb09aba28efbe7c562.json  query-7905c188bfa21f74c1f858af7d4e150a20186d1eefe204848f5421796004f8d9.json  query-7b74578beae9458bc7ffbc8b0724cddd21d5f39686852e1a80296c2ce3019ca8.json  query-c83dbb06fbbce1de9c7876a049e23fd6df2660dc0dece0926cf1fa49bb6987bf.json  query-cca4eec2cfbf8c0dd1f877322e62675a66592074b51852dd722c9eff1577eefb.json  query-d7221cef7c992ac3727f8e715e0840bb98c282213c62b5a350aa97f81dff63b3.json  query-f5faedadca36df999f13e7a12edb6abb5cd952e362eb901bafe2dbc92f9d1990.json
migrations/: 20250827035951_init.down.sql  20250827035951_init.up.sql  20250827052709_stories.down.sql  20250827052709_stories.up.sql  20250827152158_audits.down.sql  20250827152158_audits.up.sql  20250827210346_tasks.down.sql  20250827210346_tasks.up.sql
proto/gsdx/v1/: gsdx.proto
scripts/: create-story.sh  create-task.sh  delete-story.sh  delete-task.sh  list-stories.sh  list-tasks.sh  update-story.sh  update-task.sh
src/: config.rs  context.rs  domain.rs  error.rs  grpc.rs  health.rs  interceptor.rs  lib.rs  main.rs  server.rs  service.rs  util.rs
src/config/: database.rs  db.rs  mod.rs
src/domain/: mod.rs  page.rs  status.rs  story.rs  task.rs
src/domain/effect/: mod.rs  story.rs
src/effect/: mod.rs  story.rs  task.rs
src/error/: mod.rs
src/grpc/: adapter.rs  mod.rs  validate.rs
src/repo/: mod.rs  story.rs  task.rs
src/server/: health.rs  mod.rs
src/service/: core.rs  mod.rs  story.rs  task.rs  util.rs  validate.rs
src/usecase/: mod.rs
src/usecase/story/: create_story.rs  delete_story.rs  mod.rs  (+2 more)
(+5 files in other folders)
