[package]
name = "gsdx"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1.17"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14", features = ["gzip"] }
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
uuid = { version = "1", features = ["serde", "v4"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres"] }

[profile.release]
codegen-units = 1
lto = 'thin'
panic = 'abort'
